# deep_research

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md
examples/: README.md  basic_research.py
src/deep_research/: __init__.py  deep_research.py  email_agent.py
